--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
 
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
+  	
+<script src="http://maps.google.com/maps/api/js?key=AIzaSyBLj7rw4RQJQXt1vCrgwRPmiUZPoCpwh-4"></script>
 
   <!-- un-comment this code to enable service worker
   <script>
